updated at: 2023-04-25 19:35, コーヒーカップ - 稲穂と鬱穂 - BOOTH

--- a/VRChat/12/1037012.html
+++ b/VRChat/12/1037012.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "peIUWBHeF6PwXdO7IU0D30apemhBbS2V7XuZUUYGyY4="></script>
+    "74p8uQ4lyOOI++WCd2jWT4OAh+H377eQIyQ3HAvbpHE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"コーヒーカップ","description":"Blenderを初めて使った時に練習に作ったコーヒーカップです\nポリゴン数△322です\nサイズ感はだいたい10cmほどになります\nテクスチャーはありません\n作者はなぜかこれをVRChatのアバターにしました\n\n【利用規約】\nはじめに\n・モデルデータ「コーヒーカップ」（以下本モデル）の利用者はモデルデータの利用をもって本利用規約に同意したものとみなします。\n・本モデルを利用したことによって生じるいかなる損害に対して当方は一切責任を負いません。\n\n著作人格権に基づく表記\n・本モデルのデータそのものの転載・再配布は禁止です。（※1）\n・本モデルを利用して制作された作品（3Dモデル・動画・画像・ゲーム等）で対価を得るなどの、営利目的での使用は可能です。\n・本モデルでのR18、R18G用途での利用は可能です。\n・本モデルを改変や、本モデル由来のパーツを別モデルに流用などは一切自由です。\n\n※1\n本モデルデータと一切同一の物を入手可能な形でインターネット上にアップロードしたり直接頒布することを指します。\n個人利用目的でインターネット上にアップロードすることは、ウェブサイト、ゲーム／SNSの場合クライアントアプリケーションにアップロードデータと同一データのダウンロード機能がないかぎりはこれにあたりません。\nまた、別の項で記載の通り、本モデルを改変や流用するなどして作成した別モデルに関しての頒布についてはその作成者の自由です。\n\nサポートについて\nできることはまだあんまりなさそう","url":"https://booth.pm/ja/items/1037012","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/e56700a8-ead1-4390-87df-6ef0df715a9c/i/1037012/5f9f9cd2-592a-41ef-9459-8eb85fdab530_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="peIUWBHeF6PwXdO7IU0D30apemhBbS2V7XuZUUYGyY4="></script>
+    nonce="74p8uQ4lyOOI++WCd2jWT4OAh+H377eQIyQ3HAvbpHE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -151,7 +153,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1037012/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               49
@@ -166,14 +168,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1037012/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               49
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
