--- a/VRChat/01/1037001.html
+++ b/VRChat/01/1037001.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "0C2v1loUndDQYtn3EknsBfrkUK0OstU2lwgbvmPx050="></script>
+    "Nqtmiiu0sSKkwQ4Yz3GJapyM0M1+5OsT6YRhcIT36Rk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"武器/装備セット3","description":"■VRChat向けの武器セット第3弾\n・CIWS-01C(近接戦闘用高周波ブレード)\n　CIWS-01Aを改良、取り回しを重視した小型ブレード\n　鞘は展開可能。連結ジョイントが同梱されており、他の高周波ブレードの鞘と連結できます\n\n・PDW Mark1\nケースレス弾を採用したサブマシンガン。\n\n・サブアーム・ユニット\n単腕バージョンの武装懸架アーム。一部の関節はスイング機構で伸縮できます\n\n・ブースター・ユニット\n偏向ノズル(ボーンで可動します)方式のブースター。\n\n・汎用装甲4種：アバターの手足に装備することを想定したアーマーパーツ第2弾\n\n　UTS2.0対応(Packageを使用する際は予めUTS2.0を入れてください) Packageを導入することでマテリアル設定済になったものが取り込めます\n\n■ポリゴン数\n　CIWS-01C(小型高周波ブレード)：590\n　CIWS-01C(鞘)：563\n　PDW Mark1(個人防衛火器):2,792\n\n　ブースター・ユニット2：600\n　ブースター・ユニット3：380\n\n　武装連結パーツ：608\n　サブアーム・ユニット：778\n\n　装甲4：320\n　装甲5：200\n　装甲6：184\n　装甲7：336\n　(ポリゴン数が多いためAnimation Overrideでの表示を推奨します)\n\n■禁止事項：再配布、自作発言","url":"https://booth.pm/ja/items/1037001","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/4c0b8e4e-23ce-4b6b-91ae-c803cad67328/i/1037001/aaab6422-22cb-415d-a45a-b29d262d4b8c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="0C2v1loUndDQYtn3EknsBfrkUK0OstU2lwgbvmPx050="></script>
+    nonce="Nqtmiiu0sSKkwQ4Yz3GJapyM0M1+5OsT6YRhcIT36Rk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1037001/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              277
+                              278
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1037001/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              277
+                              278
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
