--- a/VRChat/97/1036297.html
+++ b/VRChat/97/1036297.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "bV6crzyo1PFWND2ic3ikn0QlpGSqqStTgqe7+D4FnVg="></script>
+    "bbh8NgViOc5k2fkPIKyURqFj9fjknbNhwSAXvjF7CXc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け「ぴょこぴょこヘアー」","description":"くじらちゃんのしおふきアホ毛を切り取ったものです。\n\nこのアホ毛は主に個人がVRChatでアバターに装着することを想定しています。\n\nポリゴン数は476です。\n\n揺れもの用のボーンが入っているので、dynamicbone等の有償アセットを使用することでアホ毛全体を揺らすことができます。\n\nユニティパッケージになっています。","url":"https://booth.pm/ja/items/1036297","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/9fbdc596-2bd2-4262-98df-0a0fa6cf30d9/i/1036297/f772fd4f-211d-485a-b52a-268a80bc3776_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="bV6crzyo1PFWND2ic3ikn0QlpGSqqStTgqe7+D4FnVg="></script>
+    nonce="bbh8NgViOc5k2fkPIKyURqFj9fjknbNhwSAXvjF7CXc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1036297/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               92
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1036297/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               92
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
