--- a/VRChat/06/1036206.html
+++ b/VRChat/06/1036206.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "28oUe7SjFrwRxZHD9lzBNKiXf6nodXT5JknaAOE3ZbE="></script>
+    "h3M9DHb5+KFe06uzCKdtk3/SYSbX5dZrFuEsVFYcvMk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"まばたきを自動で直すやつ Ver. 0.1","description":"☆☆☆注意事項☆☆☆\n\n・同じアニメーションに対しては1回しか使えません\nコンポーネントの取替や相対パスの補正を同時に行う仕様上、同じシーン上に同じアバターをいくつも出していた場合、どれか一つにしか利用できません。他のアバターに関しては手動でAnimatorの設定を行う必要があります。\n(そのうちアプデでもう少し柔軟な仕様にしたいです)\n\n・バックアップを取っておいてください\nファイルを直接書き換える処理がありますので、下手するとすでに作成済みのアニメーションが壊れたりする可能性があります。ご注意ください。\n\n・途中で止まった場合は再度実行しないでください\n処理が未完了の場合はお手数ですが残りの作業は手動で行ってください。\n\n・動作保証はありません。\nゲームオブジェクトの構造やアニメーションのパス指定の方法によっては正しく動作しない可能性があります。ご了承ください。\n原理上はまばたき以外のアニメーションにも利用できますが、ファイルの上書き等には十分注意してください。\n\n\n動作確認済みアバター\n・クレリック\n・フェンサー\n\n\n使い方\n上部メニューのHALBYから全自動まばたき修正を選びます。\n顔メッシュを含むオブジェクトと、まばたきのレガシーアニメーションがアタッチされたオブジェクト(アニメーションファイルそのものではありません)をそれぞれ選択して、Applyボタンを押してください。","url":"https://booth.pm/ja/items/1036206","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/64d6cf4e-7b03-4338-9fdc-ca5b8647d504/i/1036206/e20b7cec-0a84-4fcb-9706-6cc2cf74eb0b_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="28oUe7SjFrwRxZHD9lzBNKiXf6nodXT5JknaAOE3ZbE="></script>
+    nonce="h3M9DHb5+KFe06uzCKdtk3/SYSbX5dZrFuEsVFYcvMk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1036206/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               90
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1036206/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               90
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
