updated at: 2023-04-25 19:36, 【VRChat】ボクセル門松【world想定】 - 侍の雑貨店 - BOOTH

--- a/VRChat/47/1036147.html
+++ b/VRChat/47/1036147.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "onprHrCYDjNGBR607MLdRW9CRef8dtZyI3UtNMJDvzI="></script>
+    "AUhFqr3N7W8z/6WD15SH5x7LX0JAInCgJFrNohIUavo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat】ボクセル門松【world想定】","description":"MagicaVoxelで作られた門松です。\n\n\n当モデルはVRChatの正月用worldのオブジェクト用を想定して作成されています。\nFBXとPNGが同梱された圧縮ファルダがあります。\n特にギミック等は全く入っていません。\n\n\n初出品なので不具合が出る可能性がありますがご容赦くださいますようお願いいたします。\n\nポリゴン数\n・15630\n\n【利用規約】\n\n・このモデルの個人利用,商用利用,改変を自由に許可します。\n\n・このモデルデータの2次配布・誹謗中傷等への使用は禁止します。\n\n・良心に従って、楽しめるように使ってください。\n\n・楽しく使って頂けたらとても嬉しいです()\n\n\n※不具合がありましたら当ショップのオーナー、ウィッグ侍(@ulii_2)までご連絡ください。\n\n作製：侍の雑貨店（ウィッグ侍）\ntwitter：ウィッグ侍(@ulii_2）\nVRChatID：wigsamurai","url":"https://booth.pm/ja/items/1036147","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/ae8df399-1c88-45e3-a4cc-880b4b94ca33/i/1036147/766c22f4-e338-4836-afff-c6e90a9e69c9_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="onprHrCYDjNGBR607MLdRW9CRef8dtZyI3UtNMJDvzI="></script>
+    nonce="AUhFqr3N7W8z/6WD15SH5x7LX0JAInCgJFrNohIUavo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1036147/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               37
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1036147/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               37
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
