--- a/VRChat/17/1034917.html
+++ b/VRChat/17/1034917.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "LTUEYjMgEsioab/wAASnXCAfEn+LZdSrjePmaVUS+jc="></script>
+    "btOo6LWy7K5ShuvkutNaf8oYNRMfI8HVYjIdYI5uLjA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデル　妙　","description":"3Dモデル　妙　紹介文\n\n\n\n\n少し奇妙なお面です、\n\nチャーミングな口と顎は、人々を魅了することでしょう？\n\n\n\n\n裏ポリゴンは貼っていないので裏から見ると透けています。\n\n\n\n△1324\n●内容物\n3Dモデル　fbx\nテクスチャ　png\nUnityPackage\n\n\n\nこのモデルデータ、テクスチャ等を使用した時、利用規約に同意したものとします。\n\n\n●改変の件\nモデルデータ、テクスチャ等改変自由です。\n\n●禁止の件\nモデルデータ、改変データの再配布、販売を禁止します。\n誹謗中傷、反社会的勢力のために利用することを禁止します。\n\n●著作権の件\n配布データ、改変したデータの著作権はbm_mofyuに帰属します。\n個人利用の範囲であればモデルデータの改変、流用は自由です。\n\n\n●商業利用の件\n本モデルを利用した動画配信、アニメーション制作、ゲーム制作等の利用は\n配布データ、改変したデータを取り出せない形であれば問題ないです。\n\n●トラブルの件\nモデルデータ、テクスチャを使用したことによる金銭、機器、機会的トラブルの損失をbm_mofyuは負わないものとします。\n\n\nこの利用規約は予告なく変更・改定されることがあります。\n\n\n\n規約制定者　bm_mofyu\n\nツイッター　@bm_mofyu","url":"https://booth.pm/ja/items/1034917","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/85fde8e1-1172-4e86-a4ca-c29f3367b43e/i/1034917/d2a721dd-26b4-422d-bbb7-0f2e740c6254_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="LTUEYjMgEsioab/wAASnXCAfEn+LZdSrjePmaVUS+jc="></script>
+    nonce="btOo6LWy7K5ShuvkutNaf8oYNRMfI8HVYjIdYI5uLjA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1034917/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               31
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1034917/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               31
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
