--- a/VRChat/13/1035713.html
+++ b/VRChat/13/1035713.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "nN9JWsSQRzt+58djeSfCqLV2MWH+OCxuwNdttHapc0s="></script>
+    "+kHbu7kZ3de/6eZoz0oy+pXdWIuA/QcIfKF63Q+cAws="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料DL】大鬼角","description":"大きな鬼の角です。unityでそのまま使用できます。…多分！！\n不具合等あれば教えていただけると幸いです。\n\n右左分かれておりますので両方、または片方の大きさを変えたり、回転させたりして好きなように角を生やしてみてください！！！","url":"https://booth.pm/ja/items/1035713","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/46562510-06c8-4894-b8da-23e5c97cfcf0/i/1035713/2896e37c-c898-465f-ba4c-154591ddc86c_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="nN9JWsSQRzt+58djeSfCqLV2MWH+OCxuwNdttHapc0s="></script>
+    nonce="+kHbu7kZ3de/6eZoz0oy+pXdWIuA/QcIfKF63Q+cAws="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,10 +158,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1035713/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              234
+                              235
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1035713/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              234
+                              235
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
