updated at: 2023-04-25 19:37, 【VRC想定】特殊ビームサーベル　携帯型生体アロンダイト制御装置 - SYS / SHOP_6 - BOOTH

--- a/VRChat/82/1351982.html
+++ b/VRChat/82/1351982.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "RWQWpV/EYEkKf/GUfNnZO4eV67ifVHoRPyXPSrxQnZE="></script>
+    "8N0re0ZM0ZN5EqLzZOfBe2WCaAvg1qYYGeBPD1QVleY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRC想定】特殊ビームサーベル　携帯型生体アロンダイト制御装置","description":"【生体的循環機能を持つアロンダイト粒子の制御及び装置の小型化に関する認可計画】","url":"https://booth.pm/ja/items/1351982","offers":{"priceCurrency":"JPY","@type":"Offer","price":"800"},"image":"https://booth.pximg.net/c/620x620/dc8c3f8f-fa2c-4253-a304-2d58119dd358/i/1351982/36a19f3c-f256-4b59-a653-5a828b41b57f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="RWQWpV/EYEkKf/GUfNnZO4eV67ifVHoRPyXPSrxQnZE="></script>
+    nonce="8N0re0ZM0ZN5EqLzZOfBe2WCaAvg1qYYGeBPD1QVleY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1351982/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               76
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1351982/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               76
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
