--- a/VRChat/57/1352357.html
+++ b/VRChat/57/1352357.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "h4H6y74K0+DeATFRh+uPvuWZijzW6Cit6OLM9L7cbFM="></script>
+    "hztGG6Wsj6VeCiD3EpGIoU/Zz32+AUNnlzQwi6n7/AQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ハートメガネ","description":"■ご利用方法\n使いたいアバターのProjectに当unitypackageをインポート。\nPrefabをヒエラルキーにD\u0026Dしサイズと位置を合わせ、アバターのHeadボーン下に入れて下さい。\n※必ずバックアップを取ってから作業して下さい。\n\n■詳細\nポリゴン数（三角面）：3061\nシェーダー：メガネ向けガラスシェーダー 色付き版 Ver.2.0c（https://booth.pm/ja/items/1052508）を同梱、設定してあります\n\n■利用に際して\n\n許可\n○改造や改変\n○VRM化、その他VRMソフトでの個人利用（誰でも使用可能はNGです）\n○収益化動画への写り込み\n○モデルを利用したVtuber活動\n○unityで制作するゲームに使用できます。\n　インディーズの場合、作者名と作品名の明記のみお願いします。企業の場合、別途利用料が発生しますので、ご連絡ください。\n\n禁止事項\n○第三者への貸出：VRChat上でペデスタル、アバターコピーでの使用を禁止します。\n○配布：改造の有無を問わず、インターネットを通じて誰でもDL可能な状態にすることを禁止します。\n○売買：改造の有無を問わず、第三者への売買を禁止します。\n\nTo English speaking people.\nThis data can be remodeled, good for commercial use, do not redistribute.\n\n■利用規約全文\n同梱のkiyaku.txtか、\nオンライン利用規約のこちらを御覧ください\nhttps://kuroneko-youhinten.wixsite.com/mysite/kiyaku-preview\n\n■免責事項\n当3Dモデルに起因または関連する、使用またはその他の扱いによって生じる一切の請求、損害、その他の義務について何らの責任も負いません。\n\n\n■お問い合わせ\nBOOTHのメッセージ機能よりお願いいたします。\n\n制作：黒井\n2019/5/6\nver1.0","url":"https://booth.pm/ja/items/1352357","offers":{"priceCurrency":"JPY","@type":"Offer","price":"150"},"image":"https://booth.pximg.net/c/620x620/3101f45b-b262-485c-a1a1-3d2a8da33466/i/1352357/9fa9bd55-6bf7-4ec9-b336-54f9c9b87cae_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="h4H6y74K0+DeATFRh+uPvuWZijzW6Cit6OLM9L7cbFM="></script>
+    nonce="hztGG6Wsj6VeCiD3EpGIoU/Zz32+AUNnlzQwi6n7/AQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -117,6 +117,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -155,7 +157,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1352357/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               97
@@ -170,14 +172,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1352357/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               97
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
