updated at: 2023-04-25 19:38, ヘンゼルのパンくずパーティクル - やな板金有限公司 - BOOTH

--- a/VRChat/33/1351433.html
+++ b/VRChat/33/1351433.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "7T52dglMjg11hL4cxvCMPO7IgvYeNVwCKnTrf0FFaMc="></script>
+    "xX03tRgt26TszCtiTtLe2bVzYrtZCe6I6lCQPxFtysE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ヘンゼルのパンくずパーティクル","description":"Hansels particleはUnityでご利用いただける、Particle Systemの素材です。\nVRChatでの使用を想定しており、謎解きワールドや広大なワールドを探索する際、移動の軌跡を残すために作成しました。\n他のユーザーに自分の居場所を知らせる、ギミックによるリスポーンで、はぐれた時に素早く元の地点に戻れるようにするための足跡を残すといった目的に向いています。\n\n※　酒を奢っても奢らなくても中身は変わりません。","url":"https://booth.pm/ja/items/1351433","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/69e088f2-5cc3-4f85-a30a-6d194aa96cfa/i/1351433/ab742fce-92e1-4709-895e-c1cee38dbac0_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="7T52dglMjg11hL4cxvCMPO7IgvYeNVwCKnTrf0FFaMc="></script>
+    nonce="xX03tRgt26TszCtiTtLe2bVzYrtZCe6I6lCQPxFtysE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1351433/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              237
+                              238
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1351433/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              237
+                              238
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
