updated at: 2023-04-25 19:39, チャイナワンピース・シアン｜#VRoid - #YUINOESTORE - BOOTH

--- a/VRChat/61/1293861.html
+++ b/VRChat/61/1293861.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "gu0+S259HDalZ3BIJyTLdiHQZj9VPGceFqc2QaIG1ec="></script>
+    "jc0USI9fW41+dhb/aDB5X+frByWMvf2lqS2KwSD9HD8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"チャイナワンピース・シアン｜#VRoid","description":"服の柄は丹精込めて手描きしました。\n\nVRoid Studioのワンピース(長袖)に使用する想定で製作しています。\n\n特典版に付属するシューズは当ショップで販売中のメイドシューズをカラーチェンジしたものです。\n\nチャイナワンピース・マゼンタ\nhttps://yui-noe.booth.pm/items/1294003","url":"https://booth.pm/ja/items/1293861","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"2000","highPrice":"2500"},"image":"https://booth.pximg.net/c/620x620/58c3a4b7-3cf8-4d35-b645-655d8f4315aa/i/1293861/7047513f-9184-449d-8b02-1a82ca06bd91_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="gu0+S259HDalZ3BIJyTLdiHQZj9VPGceFqc2QaIG1ec="></script>
+    nonce="jc0USI9fW41+dhb/aDB5X+frByWMvf2lqS2KwSD9HD8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,10 +164,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1293861/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              640
+                              641
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1293861/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              640
+                              641
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
