updated at: 2023-04-25 19:43, 【無料版あり】瓶3種セット - L&#39;s Foundry - BOOTH

--- a/VRChat/48/1343548.html
+++ b/VRChat/48/1343548.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "tPXxRxgmA6UpbQpYXaluRaNClq2GUCgwSEKfOIma9bc="></script>
+    "9V8Ixx/AJiSeG/2M31hp4/WThYn30pEt0jrkebpKoG4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料版あり】瓶3種セット","description":"【フリーコンテンツ版とブースト用に内容の違いはありません。】\n\n3種類の瓶の3Dモデルです。\n小さいコルク蓋の瓶と中くらいの金具付き蓋の瓶と、勝手に使うと喧嘩になるタイプの瓶の3つセットです。\nテクスチャやマテリアルは含まれていないので、用意して適用してください。\n\n小さい瓶:928\n中くらいの瓶:2,520\n勝手に使うと喧嘩になるタイプの瓶:1,856\n\nこの作品の改編･商用利用･再配布などは自由ですが、このページのURLや紹介をしてくれると喜びます。","url":"https://booth.pm/ja/items/1343548","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/8f18265c-b9b0-41cb-9ea6-d9ee3bb3a017/i/1343548/99c62506-05a1-4fed-8555-accd948f08dd_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="tPXxRxgmA6UpbQpYXaluRaNClq2GUCgwSEKfOIma9bc="></script>
+    nonce="9V8Ixx/AJiSeG/2M31hp4/WThYn30pEt0jrkebpKoG4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1343548/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               104
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1343548/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               104
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
