updated at: 2023-04-25 19:45, 比較的ローポリ缶モデル（素体） - 鮪府Industries - BOOTH

--- a/VRChat/75/1342675.html
+++ b/VRChat/75/1342675.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "AmqIh8WAFSoz5gpCsXb4F1kkuOtWFoVeuHaS8r1lhB8="></script>
+    "mqfxwevhhgsylOl1jn5bX+pn/0DogXjZzCItZWrlqI0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"比較的ローポリ缶モデル（素体）","description":"比較的ローポリ＋ドット絵テクスチャの缶のモデルです。\nテクスチャ改変推奨です。\n2つ目の画像は改変例(自作)です。流石に上記のを配布するのはアカンので、どうしても欲しかったら個別で連絡ください。\n埋め込みでSketchfabを張り付けておきます。都合上テクスチャはルートビアのヤツですが、ポリゴンとか見れます。\n\n\n\n・Tris：716\n・テクスチャ解像度：128×128\n・テクスチャ数：1枚\n・マテリアル数：1","url":"https://booth.pm/ja/items/1342675","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"100","highPrice":"1000"},"image":"https://booth.pximg.net/c/620x620/f215380d-1931-4039-9529-a102e7243a1f/i/1342675/dc632ea8-4afe-48f3-ba23-dc6b3a09d4fc_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="AmqIh8WAFSoz5gpCsXb4F1kkuOtWFoVeuHaS8r1lhB8="></script>
+    nonce="mqfxwevhhgsylOl1jn5bX+pn/0DogXjZzCItZWrlqI0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1342675/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               21
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1342675/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               21
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
