updated at: 2023-04-25 19:45, VRChat用アバター「フリーフォールを設置できるカラスアバター」【オリジナル3Dモデル】 - 竜のねどこ - BOOTH

--- a/VRChat/14/1342714.html
+++ b/VRChat/14/1342714.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "U2Z3Q/1T4KgE6TCC7pxiaHj43O5SUOCSVjZ8Kf+dkbY="></script>
+    "rOgulrxCmS7Sao1oueegwkxhSIYKI/jNKw/gLYYDII4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat用アバター「フリーフォールを設置できるカラスアバター」【オリジナル3Dモデル】","description":"VRChatでの使用を想定したハンドサインのロックンロールで目の前にフリーフォールを設置できるカラスのアバターです。\n\n・改変可。カラスのアバターを他のアバターに差し替えても構いません。\n・フリーフォールのみを自作ワールドに設置してもかまいません。\n・ペデスタル設置やpublic設定やアバタークローン許可設定や再配布等をしたい場合は私に相談してください。\n・フルトラ対応\n・本体は4000ポリゴン程度\n・リップシンク対応（シェイプキー名はMMD準拠）\n・瞬きやいくつかの表情差分あり\n・髪の毛や尻尾を揺らすには別途ダイナミックボーンを購入して自分で設定してください\n・フリーフォールの合計６個の椅子に他のユーザーに座ってもらうことができます。\n（※本人は乗れません）\n・UnityやVRChatのバージョン更新により動作しなくなる可能性もありますのでご了承ください。\n・また、特定のワールドでは正常に動作しない場合がありますのでご了承ください。\n・その他質問等があれば私のTwitterアカウントに連絡してください。\n\n修正 2019/05/15\nアニメーションのパス名を修正し忘れていたので修正しました。\n既にDLしていただいた6名の方、更新版をご希望でしたら、お手数ですが再DLまたは連絡をお願いします。","url":"https://booth.pm/ja/items/1342714","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"1000","highPrice":"2000"},"image":"https://booth.pximg.net/c/620x620/9e8313ff-66da-4565-a550-3c52fa584cb9/i/1342714/8d50376a-6852-435b-ad1e-469fd5f3bd06_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="U2Z3Q/1T4KgE6TCC7pxiaHj43O5SUOCSVjZ8Kf+dkbY="></script>
+    nonce="rOgulrxCmS7Sao1oueegwkxhSIYKI/jNKw/gLYYDII4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1342714/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               76
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1342714/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               76
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
